# xyce-py

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml  mutation.yml  post-publish-smoke.yml  publish.yml  release-candidate.yml  xyce-runner-smoke.yml
constraints/: runtime-min.txt
docs/: api-reference.md  capability-matrix.md  configurable-features.md  release.md  testing-matrix.md
docs/adr/: 0001-compiler-simulation-interface.md  0002-opaque-spice-directives.md  0003-public-topology-representation.md  0004-raw-netlist-project-interface.md  0005-typed-directive-builders.md  0006-solver-options-interface.md  0007-command-line-run-interface.md  0008-measurement-extraction-interface.md  0009-circuit-graph-output-artifacts.md  0010-parameter-sweep-interface.md  0011-monte-carlo-sweep-interface.md  0012-xdm-translator-adapter.md  0013-raw-template-devices.md  0014-graph-compiled-projects.md  0015-configurable-xyce-features.md  0016-graph-input-and-result-projection.md
examples/: 01_circuitgraph_quickstart.ipynb  02_raw_netlist_and_features.ipynb  03_sweeps_for_design_analysis.ipynb  README.md
src/xyce_py/: __init__.py  __main__.py  _solutions.py  _validation.py  cli.py  compiler.py  directives.py  engine.py  features.py  graph.py  measurements.py  models.py  netlists.py  outputs.py  sweeps.py  xdm.py
tests/: __init__.py  conftest.py  readme_helpers.py  test_compiler.py  test_engine.py  test_graph.py  test_models.py  test_package.py  test_simulate.py
tests/integration/: test_cli_run.py  test_large_circuit_real_xyce.py  test_measurements_real_xyce.py  test_parameter_sweep_real_xyce.py  test_raw_netlist_project.py  test_readme_simulation_example.py  test_simulate_ac.py  test_simulate_dc.py  test_simulate_op.py  test_simulate_tran.py  test_xyce_runner_smoke.py
tests/packaging/: test_installed_package.py
tools/: _compile.py  pip_audit_policy.py  release_helpers.py  release_smoke.py
(+31 files in other folders)
