[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xyce-py"
version = "1.0.0"
authors = [
  { name = "Xuchang Tang", email = "xuctang@gmail.com" },
]
description = "A generic, NetworkX-driven Python wrapper for the Sandia Xyce circuit simulation engine."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
  "networkx>=3.0",
  "pandas>=2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
